--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,10 @@ body {
 .computer-choice {
     margin-left: 1rem;
     font-size: 2rem;
+}
 
+.choice:hover {
+    transform: scale(1.2);
 }
 
 .instructions {
