--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
     justify-content: center;
 }
 
-.choice {
+.button {
     font-size: 5rem;
     background: none;
     border: none;
@@ -98,7 +98,7 @@ body {
     font-size: 2rem;
 }
 
-.choice:hover {
+.button:hover {
     transform: scale(1.2);
 }
 
