Added result function

--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,8 @@ body {
     padding: 20px 0;
 }
 
-.player-choice,
-.computer-choice {
+
+.results {
     margin-left: 1rem;
     font-size: 2rem;
 }
