--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,16 @@ body {
     transform: scale(1.2);
 }
 
+.not-winner.winner {
+    opacity: 1;
+    font-size: 2.5rem;
+}
+
+.not-winner {
+    font-size: 2rem;
+    opacity: 0.3;
+}
+
 .instructions {
     display: flex;
     flex-direction: column;
