--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,36 @@ body {
     margin: 10px;
     line-height: 20px;
 }
+
+
+@media screen and (max-width: 790px) {
+    #water,
+    #fire,
+    #earth {
+        margin: 0.5rem 1.5rem;
+        font-size: 3rem;
+    }
+
+    .instructions {
+        margin: 5% 15%;
+    }
+
+    .main-content {
+        margin: 5% 10%;
+    }
+}
+
+@media screen and (max-width: 590px) {
+    
+    .main-content {
+        margin: 5% 5%;
+    }
+    
+    .score-display {
+        grid-template-columns: none;
+    }
+
+    .results {
+        font-size: 1.5rem;
+    }
+}
