--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(/image/bg-texture.jpg);
+    background-image: url(../image/bg-texture.jpg);
     font-family: 'Archivo', sans-serif;
 }
 
