--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo&display=swap');
 /* font-family: 'Archivo', sans-serif; Added as a Reminder.*/ 
 * {
     margin: 0;
