--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(../image/bg-texture.jpg);
+    background-image: url(../image/bg-texture.webp);
     font-family: 'Archivo', sans-serif;
 }
 
