changed background image location

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(../image/bg-texture.webp);
+    background-image: url('https://imgur.com/vv9nADq.jpg');
     font-family: 'Archivo', sans-serif;
 }
 
